add field annotation credit and courseId
