# backend/docs/swagger.json
@@ -2619,9 +2619,21 @@
         "ent.Course": {
             "type": "object",
             "properties": {
+                "annotation": {
+                    "description": "Annotation holds the value of the \"annotation\" field.",
+                    "type": "string"
+                },
                 "course": {
                     "description": "Course holds the value of the \"course\" field.",
                     "type": "string"
+                },
+                "course_id": {
+                    "description": "CourseID holds the value of the \"course_id\" field.",
+                    "type": "integer"
+                },
+                "credit": {
+                    "description": "Credit holds the value of the \"credit\" field.",
+                    "type": "integer"
                 },
                 "edges": {
                     "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the CourseQuery when eager-loading is set.",
